created common components and layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.light {
+  --background: 241, 245, 249;
+  --border: 226, 232, 240;
+  --card: 255, 255, 255;
+  --copy-primary: 23, 23, 23;
+  --copy-secondary: 100, 116, 139;
+  --cta: 139, 92, 246;
+  --cta-active: 124, 58, 237;
+  --cta-text: 255, 255, 255;
+  background: rgba(var(--background));
+  color: rgba(var(--copy-secondary));
+}
+.dark {
+  --background: 26, 34, 44;
+  --border: 46, 58, 71;
+  --card: 36, 48, 63;
+  --copy-primary: 250, 250, 250;
+  --copy-secondary: 100, 116, 139;
+  --cta: 99, 102, 241;
+  --cta-active: 79, 70, 229;
+  --cta-text: 255, 255, 255;
+  background: rgba(var(--background));
+  color: rgba(var(--copy-secondary));
+}
