--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,17 @@
 .spin {
   animation: spin 5s linear infinite;
 }
+.rtl-animation {
+  animation: fadeInRight 0.5s ease-in-out;
+}
+
+.ltr-animation {
+  animation: fadeInLeft 0.5s ease forwards;
+}
+
+.zoom-in-element {
+  animation: zoomIn 0.5s ease forwards;
+}
 
 @keyframes spin {
   from {
@@ -39,5 +50,36 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); /* Start 100px from the right */
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0); /* End at the original position */
+  }
+}
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px); /* Start 100px to the left */
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0); /* End at the original position */
+  }
+}
+/* Zoom-in animation */
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.5); /* Start at half size */
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1); /* Zoom to full size */
   }
 }
